# CPPCausality

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  LICENSE  README.md  conanfile.txt  dev.md  engine.cpp  test.py
call_c_from_python/engine_api/: CMakeLists.txt  engine_api.h
data/: reference_results.json
doc/: c_in_python.md  conan.md  dev_conan.md  fci.md  old_maincpp.md  opencl.md  unit_test.md
examples/: CMakeLists.txt  KV-41762_202301_test.xlsx  benchmark_paper.cpp  main.cpp
ontology/: vehicle_constraints.owl
src/: CMakeLists.txt  causalDiscovery.cpp  causalDiscovery.h  data.csv  dataGenerator.cpp  dataGenerator.h  dataLoader.cpp  dataLoader.h  datarow.h  dataset.cpp  dataset.h  graph.cpp  graph.h  main.cpp  statistic.cpp  statistic.h  test.py
src/causalDiscovery/: CMakeLists.txt  CSVReader.cpp  causalDiscovery.cpp  causalDiscovery.h  causalDiscoveryAPI.cpp  dataGenerator.py  dataset.h  graph.cpp  graph.h  statistic.cpp
src/causalDiscovery/tests/: CMakeLists.txt  causalDiscoveryTest.cpp  graphConstraintsTest.cpp  statisticTest.cpp
src/engine_api/: CMakeLists.txt  engine_api.cpp  engine_api.h  engine_api_bindings.h
src/engine_api/test/: CMakeLists.txt  engine_api_test.cpp
src/include/: causalDiscoveryAPI.h
src/ontology/: CMakeLists.txt  classType.cpp  classType.h  individual.cpp  individual.h  ontology.cpp  ontology.h  ontologyXMLReader.cpp  ontologyXMLReader.h  property.cpp  property.h
src/ontology/tests/: CMakeLists.txt  ontologyTest.cpp  ontologyXMLReaderTest.cpp
src/ontologyConstraints/: CMakeLists.txt  ontologyConstraintsHandler.cpp  ontologyConstraintsHandler.h
src/test/: CMakeLists.txt  engine_test.cpp
src/tests/: staticTest.md  statisticTest.cpp
tests/: CMakeLists.txt  CSVReader.h  README.md  causalDiscoveryTest.cpp  data.csv  dataFromOntologyTest.cpp  ontologyWithDiscoveryTest.cpp
tools/call_c_from_python/engine_api/: engine_api_bindings.h
tools/call_c_from_python/engine_api/test/: CMakeLists.txt  engine_api_test.cpp
